2008-09-19  Eli Zaretskii  <eliz@gnu.org>

	* process.c (procfs_system_process_attributes): Fix cmdline in
	case /proc/PID/cmdline is empty.

	* xterm.c (x_wm_set_size_hint): Use x_display_pixel_width and
	x_display_pixel_height.

2008-09-19  Juanma Barranquero  <lekktu@gmail.com>

	* frame.c (x_fullscreen_adjust): Declare var as Display_Info.

	* w32fns.c (Fx_display_pixel_width, Fx_display_pixel_height)
	(compute_tip_xy): Use x_display_pixel_width, x_display_pixel_height.

2008-09-19  Dan Nicolaescu  <dann@ics.uci.edu>

	* dispextern.h (struct it): Move line_wrap away from the middle of
	bitfields.  Move voffset in struct iterator_stack_entry after the
	bitfields.  Move tab_width near after another short.

2008-09-18  Dan Nicolaescu  <dann@ics.uci.edu>

	* frame.h (struct frame): Move alpha from the middle of bitfields.

	* window.h (struct window): Move frozen_window_start_p after the
	rest of the bitfields to reduce padding.

2008-09-18  Chong Yidong  <cyd@stupidchicken.com>

	* xterm.h (x_display_info): Remove `height' and `width' members.

	* nsterm.h (ns_display_info): Remove `height' and `width' members.

	* w32term.h (w32_display_info): Remove `height', `width',
	`height_in', and `width_in' members.

	* xterm.c (x_display_pixel_height, x_display_pixel_width): New
	functions.
	(x_calc_absolute_position): Use them.
	(x_term_init): Omit removed `height' and `width' members.

	* w32term.c (x_display_pixel_height, x_display_pixel_width): New
	functions.
	(w32_read_socket, x_calc_absolute_position): Use them.
	(w32_initialize_display_info, w32_term_init): Omit removed members
	of w32_display_info.

	* nsterm.m (x_display_pixel_height, x_display_pixel_width): New
	functions.
	(ns_initialize_display_info): Omit removed members of
	ns_display_info.

	* xterm.c (x_display_pixel_height, x_display_pixel_width): New
	functions.
	(x_calc_absolute_position): Use them.
	(x_term_init): Omit removed `height' and `width' members.
